# video-utils

./: .gitignore  config.py  pre-commit  predict.py  pyproject.toml  setup.cfg  test.py  train.py
lightning_logs/version_0/: events.out.tfevents.1665906032.ubuntu-3950x.2292054.0
lightning_logs/version_1/: events.out.tfevents.1665906593.ubuntu-3950x.2332278.0
src/video/: callback.py  dataset.py  io.py  net.py  reader.py
src/video/nn/: backbone.py  callback.py  ckpt.py  dct.py  einsum.py  freq_layer.py  fuse.py  guided_filter.py  layer.py  log1mexp.py  loss.py  mish.py  model.py  module.py  utils.py
