[build-system]
requires = ["setuptools>=62.6", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "video"
description = "utils for working with onnx models"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
]
requires-python = ">=3.7"
dependencies = [
    "av>=9.2.0",
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "video.version.version"}

[tool.setuptools_scm]
write_to = "src/video/version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100